<resources>
    <!-- job_01-->
    <string name="app_name">job01</string>
    <string name="d">job</string>
    <string name="top">用户注册</string>
    <string name="button">提交用户信息</string>
    <string name="name">用户名</string>
    <string name="password">密&#12288;码</string>
    <string name="radioButton_man">男</string>
    <string name="radioButton_woman">女</string>
    <string name="editText_name">请输入您的用户名</string>
    <string name="editText_password">请输入您的密码</string>
    <!-- job_02-->
    <string name="string_top">智能输入法</string>
    <string name="massage">确认您的用户信息</string>
    <string name="sex">性&#12288;别</string>
    <string name="mao">：</string>
    <string name="string_0">发送</string>
    <string name="string_1">,</string>
    <string name="string_2">1</string>
    <string name="string_3">2</string>
    <string name="string_4">3</string>
    <string name="string_5">清空</string>
    <string name="string_6">？</string>
    <string name="string_7">4</string>
    <string name="string_8">5</string>
    <string name="string_9">6</string>
    <string name="string_10">0</string>
    <string name="string_11">！</string>
    <string name="string_12">7</string>
    <string name="string_13">8</string>
    <string name="string_14">9</string>
    <string name="string_15">.</string>
    <string name="string_16">符</string>
    <string name="string_17">123</string>
    <string name="string_18">﹂</string>
    <string name="string_19">中/英</string>
    <string name="string_20">换行</string>
    <!-- job_03-->
    <string name="string_01">1</string>
    <string name="string_02">2</string>
    <string name="string_03">3</string>
    <string name="string_04">4</string>
    <string name="string_05">5</string>
    <string name="string_06">6</string>
    <string name="string_07">7</string>
    <string name="string_08">8</string>
    <string name="string_09">9</string>
</resources>
