<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:id="@+id/constraint_Layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="3"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/title_Image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="#111111"
            android:contentDescription="@string/d"
            app:srcCompat="@android:drawable/radiobutton_off_background" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0.0dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#111111"
            android:gravity="center|start"
            android:text="@string/string_top"
            android:textColor="#ffffff"
            android:textSize="34sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical"
        android:columnCount="4"
        android:rowCount="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/massage"
                android:textColor="#000000"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="30sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mao"
                android:textColor="#000000"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/user_name_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="30sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mao"
                android:textColor="#000000"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/user_password_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="#000000"
                android:textSize="30sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mao"
                android:textColor="#000000"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/user_sex_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="30sp" />
        </LinearLayout>
    </GridLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_gravity="bottom" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />
            <EditText
                android:layout_weight="1"
                android:layout_width="0.0dp"
                android:padding="8dp"
                android:singleLine="true"
                android:background="@drawable/test2"
                android:layout_height="fill_parent" />
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/Bottom_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/test"
                android:layout_gravity="center"
                android:text="@string/string_0"
                android:textColor="#ffffff"
                android:textSize="25sp" />
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_1" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_2" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_3" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_4" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_5" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_6" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_7" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_8" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_9" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_10" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_11" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_12" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_13" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_14" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_15" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_16" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_17" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_18" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/string_19" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/string_20" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </GridLayout>

</GridLayout>
