<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="1"
    android:rowCount="3" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ff00ffff">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/string_01"
            android:background="#ff00ffff"
            android:textSize="80sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/string_02"
            android:background="#ff00ffff"
            android:textSize="80sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/string_03"
            android:background="#ff00ffff"
            android:textSize="80sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ff00ffff">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/string_04"
            android:background="#ff00ffff"
            android:textSize="80sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/string_05"
            android:background="#ff00ffff"
            android:textSize="80sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/string_06"
            android:background="#ff00ffff"
            android:textSize="80sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ff00ffff">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/string_07"
            android:background="#ff00ffff"
            android:textSize="80sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/string_08"
            android:background="#ff00ffff"
            android:textSize="80sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/string_09"
            android:background="#ff00ffff"
            android:textSize="80sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</GridLayout>
