<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="5"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:contentDescription="@string/d"
            android:id="@+id/title_Image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            app:srcCompat="@android:drawable/radiobutton_off_background"
            android:background="#111111" />
        <TextView
            android:id="@+id/title_text"
            android:layout_width="0.0dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#111111"
            android:gravity="center|start"
            android:text="@string/top"
            android:textColor="#ffffff"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:contentDescription="@string/d"
            android:id="@+id/user1"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="#ffffff" />
        <TextView
            android:id="@+id/user2"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#111111"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/user_name_input"
            android:layout_width="0.0dp"
            android:layout_height="46dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/editText_name"
            android:gravity="start"
            android:ems="10"
            android:textSize="20sp" />
        <ImageView
            android:contentDescription="@string/d"
            android:id="@+id/user4"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="#ffffff" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:contentDescription="@string/d"
            android:id="@+id/password1"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="#ffffff" />
        <TextView
            android:id="@+id/password2"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="#111111"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/user_password_input"
            android:layout_width="0.0dp"
            android:layout_height="46dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/editText_password"
            android:gravity="start"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="textPassword" />
        <ImageView
            android:contentDescription="@string/d"
            android:id="@+id/password4"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="#ffffff" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/choose_man_input"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/radioButton_man"
            android:checked="true"
            android:layout_margin="30dp"
            android:textColor="#111111"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/choose_woman_input"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:ems="10"
            android:text="@string/radioButton_woman"
            android:background="#ffffff"
            android:checked="false"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="#ffffff"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/Button_ok"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:background="#3797B4"
            android:gravity="center"
            android:text="@string/button"
            android:textColor="#111111"
            android:textSize="30sp" />
    </LinearLayout>

</GridLayout>
